Fix hamburger menu item width on mobile

--- a/src/styles/modules/_thematicViews.scss
+++ b/src/styles/modules/_thematicViews.scss
@@ -54,6 +54,11 @@
 
   }
 
+  header .navbar .link {
+    display:block;
+    
+}
+
   .language-picker {
     width: 110px;
     font-size: 13px;
